// ConnectMe Database Schema - DBML for dbdiagram.io
// Проект: ConnectMe Dating Bot
// Версия: 2.0.0
// Дата: 2026-03-16

// ============================================================================
// ENUMS
// ============================================================================

Enum gender_enum {
  male
  female
  other
}

Enum looking_for_enum {
  male
  female
  both
}

Enum relationship_goal_enum {
  casual
  serious
  friendship
  networking
}

Enum swipe_action_enum {
  like
  pass
  super_like
}

Enum match_status_enum {
  active
  archived
  blocked
  unmatched
}

Enum moderation_status_enum {
  pending
  approved
  rejected
  under_review
}

Enum metric_type_enum {
  counter
  gauge
  histogram
}

Enum date_category_enum {
  cafe
  activity
  outdoor
  cultural
  entertainment
}

Enum cost_level_enum {
  free
  low
  medium
  high
}

Enum report_reason_enum {
  spam
  fake_profile
  harassment
  inappropriate_content
  underage
  other
}

Enum report_status_enum {
  open
  investigating
  resolved
  dismissed
}

Enum block_reason_enum {
  manual
  report
  system
}

// ============================================================================
// USERS & AUTHENTICATION
// ============================================================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  telegram_id bigint [unique, not null]
  username varchar(255)
  first_name varchar(255) [not null]
  last_name varchar(255)
  language_code varchar(10) [default: 'ru']
  is_banned boolean [default: false]
  ban_reason text
  banned_at timestamptz
  last_active_at timestamptz
  deleted_at timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table profiles {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [unique, not null, ref: > users.id]
  display_name varchar(100)
  date_of_birth date [not null]
  gender gender_enum [not null]
  bio text
  height_cm smallint
  interests jsonb [default: `'[]'::jsonb`]
  city varchar(100)
  country_code char(2)
  latitude decimal(9,6) [check: `latitude BETWEEN -90 AND 90`]
  longitude decimal(9,6) [check: `longitude BETWEEN -180 AND 180`]
  location_updated_at timestamptz
  looking_for looking_for_enum [not null]
  age_range_min smallint [default: 18, check: `age_range_min >= 18`]
  age_range_max smallint [default: 100, check: `age_range_max <= 100`]
  distance_max_km smallint [default: 100, check: `distance_max_km BETWEEN 1 AND 500`]
  is_active boolean [default: true]
  is_verified boolean [default: false]
  verified_at timestamptz
  profile_completion_pct smallint [default: 0]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table preferences {
  id uuid [pk, default: `gen_random_uuid()`]
  profile_id uuid [unique, not null, ref: > profiles.id]
  preferred_cities jsonb [default: `'[]'::jsonb`]
  preferred_countries jsonb [default: `'[]'::jsonb`]
  education_preference varchar(50)
  occupation_preference varchar(50)
  relationship_goals relationship_goal_enum
  height_min_cm smallint
  height_max_cm smallint
  deal_breakers jsonb [default: `'[]'::jsonb`]
  importance_weights jsonb [default: `'{"age": 0.2, "distance": 0.3, "interests": 0.5}'::jsonb`]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table photos {
  id uuid [pk, default: `gen_random_uuid()`]
  profile_id uuid [not null, ref: > profiles.id]
  s3_key varchar(500) [not null]
  s3_bucket varchar(100) [default: 'profile-photos']
  thumbnail_s3_key varchar(500)
  blurhash varchar(50)
  is_primary boolean [default: false]
  sort_order smallint [default: 0]
  file_size_bytes integer
  mime_type varchar(50) [default: 'image/jpeg']
  width smallint
  height smallint
  moderation_status moderation_status_enum [default: 'pending']
  moderated_by uuid [ref: > users.id]
  moderated_at timestamptz
  rejection_reason text
  nsfw_score decimal(3,2)
  face_detected boolean
  deleted_at timestamptz
  created_at timestamptz [default: `now()`]
}

// ============================================================================
// SWIPES & MATCHES
// ============================================================================

Table swipes {
  id uuid [pk, default: `gen_random_uuid()`]
  swiper_id uuid [not null, ref: > profiles.id]
  swiped_id uuid [not null, ref: > profiles.id]
  action swipe_action_enum [not null]
  source varchar(20)
  time_spent_ms integer
  context_data jsonb [default: `'{}'::jsonb`]
  created_at timestamptz [default: `now()`]
}

Table matches {
  id uuid [pk, default: `gen_random_uuid()`]
  profile1_id uuid [not null, ref: > profiles.id]
  profile2_id uuid [not null, ref: > profiles.id]
  status match_status_enum [default: 'active']
  initiator_id uuid [ref: > profiles.id]
  message_count integer [default: 0]
  last_message_at timestamptz
  last_message_preview varchar(100)
  unmatched_by uuid [ref: > profiles.id]
  unmatched_at timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table messages {
  id uuid [pk, default: `gen_random_uuid()`]
  match_id uuid [not null, ref: > matches.id]
  sender_id uuid [not null, ref: > profiles.id]
  content text
  message_type varchar(20) [default: 'text']
  media_urls jsonb [default: `'[]'::jsonb`]
  is_read boolean [default: false]
  read_at timestamptz
  is_delivered boolean [default: false]
  delivered_at timestamptz
  reply_to_id uuid [ref: > messages.id]
  is_edited boolean [default: false]
  edited_at timestamptz
  deleted_at timestamptz
  created_at timestamptz [default: `now()`]
}

// ============================================================================
// SAFETY: REPORTS & BLOCKS
// ============================================================================

Table reports {
  id uuid [pk, default: `gen_random_uuid()`]
  reporter_profile_id uuid [not null, ref: > profiles.id]
  reported_profile_id uuid [not null, ref: > profiles.id]
  reason report_reason_enum [not null]
  description text
  evidence_urls jsonb [default: `'[]'::jsonb`]
  message_id uuid [ref: > messages.id]
  status report_status_enum [default: 'open']
  reviewed_by uuid [ref: > users.id]
  reviewed_at timestamptz
  resolution_notes text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table blocks {
  id uuid [pk, default: `gen_random_uuid()`]
  blocker_profile_id uuid [not null, ref: > profiles.id]
  blocked_profile_id uuid [not null, ref: > profiles.id]
  reason block_reason_enum [default: 'manual']
  created_at timestamptz [default: `now()`]
}

// ============================================================================
// RATING SYSTEM (3 LEVELS)
// ============================================================================

Table ratings_primary {
  id uuid [pk, default: `gen_random_uuid()`]
  profile_id uuid [unique, not null, ref: > profiles.id]
  completeness_score decimal(5,4) [default: 0, check: `completeness_score BETWEEN 0 AND 1`]
  photo_score decimal(5,4) [default: 0, check: `photo_score BETWEEN 0 AND 1`]
  photo_count smallint [default: 0]
  preference_match_score decimal(5,4) [default: 0, check: `preference_match_score BETWEEN 0 AND 1`]
  verification_bonus decimal(5,4) [default: 0, check: `verification_bonus BETWEEN 0 AND 1`]
  total_score decimal(5,4) [default: 0, check: `total_score BETWEEN 0 AND 1`]
  version integer [default: 1]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table ratings_behavioral {
  id uuid [pk, default: `gen_random_uuid()`]
  profile_id uuid [not null, ref: > profiles.id]
  like_received_count integer [default: 0]
  pass_received_count integer [default: 0]
  like_count_score decimal(5,4) [default: 0, check: `like_count_score BETWEEN 0 AND 1`]
  like_pass_ratio_score decimal(5,4) [default: 0, check: `like_pass_ratio_score BETWEEN 0 AND 1`]
  match_rate_score decimal(5,4) [default: 0, check: `match_rate_score BETWEEN 0 AND 1`]
  conversation_initiation_score decimal(5,4) [default: 0, check: `conversation_initiation_score BETWEEN 0 AND 1`]
  response_rate_score decimal(5,4) [default: 0, check: `response_rate_score BETWEEN 0 AND 1`]
  activity_pattern_score decimal(5,4) [default: 0, check: `activity_pattern_score BETWEEN 0 AND 1`]
  total_score decimal(5,4) [default: 0, check: `total_score BETWEEN 0 AND 1`]
  period_start date [not null]
  period_end date [not null]
  created_at timestamptz [default: `now()`]
}

Table ratings_combined {
  id uuid [pk, default: `gen_random_uuid()`]
  profile_id uuid [unique, not null, ref: > profiles.id]
  primary_score decimal(5,4) [not null, check: `primary_score BETWEEN 0 AND 1`]
  primary_weight decimal(3,2) [default: 0.40]
  behavioral_score decimal(5,4) [not null, check: `behavioral_score BETWEEN 0 AND 1`]
  behavioral_weight decimal(3,2) [default: 0.50]
  referral_bonus decimal(5,4) [default: 0, check: `referral_bonus BETWEEN 0 AND 1`]
  referral_weight decimal(3,2) [default: 0.10]
  total_score decimal(5,4) [default: 0, check: `total_score BETWEEN 0 AND 1`]
  rank_position integer
  percentile decimal(5,4)
  tier varchar(10)
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// ============================================================================
// REFERRALS & SESSIONS
// ============================================================================

Table referrals {
  id uuid [pk, default: `gen_random_uuid()`]
  referrer_id uuid [not null, ref: > users.id]
  referred_id uuid [unique, not null, ref: > users.id]
  referral_code varchar(50) [unique, not null]
  bonus_earned decimal(10,2) [default: 0]
  referred_user_active boolean [default: false]
  referred_user_premium boolean [default: false]
  referred_profile_created boolean [default: false]
  referred_first_match boolean [default: false]
  created_at timestamptz [default: `now()`]
  activated_at timestamptz
}

Table sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  session_token varchar(255) [unique, not null]
  redis_cache_key varchar(255)
  cached_profiles_count smallint [default: 0]
  current_profile_index smallint [default: 0]
  last_profile_shown_at timestamptz
  device_info jsonb
  ip_address varchar(45)
  is_active boolean [default: true]
  expires_at timestamptz [not null]
  last_heartbeat_at timestamptz
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// ============================================================================
// RATE LIMITING & ANTI-ABUSE
// ============================================================================

Table daily_limits {
  id uuid [pk, default: `gen_random_uuid()`]
  profile_id uuid [not null, ref: > profiles.id]
  date date [not null, default: `CURRENT_DATE`]
  swipes_count smallint [default: 0]
  swipes_limit smallint [default: 50]
  super_likes_count smallint [default: 0]
  super_likes_limit smallint [default: 3]
  messages_count smallint [default: 0]
  messages_limit smallint [default: 200]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// ============================================================================
// NOTIFICATIONS
// ============================================================================

Table notifications {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  type varchar(30) [not null]
  title varchar(200) [not null]
  body text
  data jsonb [default: `'{}'::jsonb`]
  is_sent boolean [default: false]
  sent_at timestamptz
  is_read boolean [default: false]
  read_at timestamptz
  created_at timestamptz [default: `now()`]
}

// ============================================================================
// ANALYTICS & METRICS
// ============================================================================

Table metrics {
  id uuid [pk, default: `gen_random_uuid()`]
  metric_name varchar(100) [not null]
  metric_type metric_type_enum [not null]
  metric_value decimal(20,6) [not null]
  dimensions jsonb [default: `'{}'::jsonb`]
  period_start timestamptz [not null]
  period_end timestamptz [not null]
  created_at timestamptz [default: `now()`]
}

// ============================================================================
// CONTENT: DATE IDEAS
// ============================================================================

Table date_ideas {
  id uuid [pk, default: `gen_random_uuid()`]
  category date_category_enum [not null]
  title varchar(200) [not null]
  description text
  avg_cost cost_level_enum
  suitable_interests jsonb [default: `'[]'::jsonb`]
  city varchar(100)
  country_code char(2)
  latitude decimal(9,6)
  longitude decimal(9,6)
  suggested_count integer [default: 0]
  positive_feedback_count integer [default: 0]
  is_active boolean [default: true]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// ============================================================================
// AUDIT LOG
// ============================================================================

Table audit_log {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id]
  action varchar(50) [not null]
  entity_type varchar(50) [not null]
  entity_id uuid [not null]
  old_values jsonb
  new_values jsonb
  ip_address varchar(45)
  created_at timestamptz [default: `now()`]
}
